syntax = "proto3";
package oid4vc;

// import "google/protobuf/any.proto";

service OID4VCI {
  rpc CreateOffer (OfferConfig) returns (Offer) {}
}

message OfferConfig {
  repeated string credentials = 1;
}

message Offer {
  string uri = 1;
  string offer = 2;
}